--- a/index.html
+++ b/index.html
@@ -34,9 +34,43 @@
 	<img src="images/banner-1.jpg" alt="">
 	</div>
 	<div class="box news">
-     <h2>学院动态/News</h2>
+     <h2>学院动态
+		 <span style="font-size: 1.3rem; color:#717171;margin-left: 8px">/ News</span></h2>
+		</div>
+	<div class=" col-lg-5 col-md-12 m-0 p-0">
+	<div id="imgnews" class="carousel slide"
+		 data-ride="carousel" data-interval="5000"></div></div>
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
 		<div class="fi img_ news">
-		  <img src="images/news1.jpg" alt="">
+		  <img src="images/news1.jpg" alt="" width="357" height="357">
 		<h3><a href="">副校长李利-行调研国家网络安全基地孵化器</a></h3>
 		<p>本网讯（通讯员 彭传波 巫健） 6月19日，武昌职业学院副长李利率领学校世界技能大赛办公室主任彭传波，校产与后勤管理处副处长胥连路，云计算与信息安全学院副院长巫健，世界技能大赛办公室技术科科长马涛等一行人深入国家网安基地调研。</p>
 		</div>
