--- a/index.html
+++ b/index.html
@@ -2,87 +2,139 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>左桂林仿站作业--电信学院</title>
+<title>左桂林仿站：电信学院</title>
 <link rel="stylesheet" href="style.css">
-	<link
+<link rel="stylesheet" href="//at.alicdn.com/t/font_2173819_ewer85pr085.css">
 </head>
-
 <body>
-<div class="box top">
-  <div class="fl"><img src="images/logo.jpg" alt=""></div>
-  <div class="fr">
+<div class="top box">
+  <div class="logo fl"><img src="images/logo.jpg" alt=""></div>
+  <div class="search fr">
     <input type="text">
-    <button>搜索栏</button>
-   </div>
+    <button>搜索</button>
+  </div>
 </div>
+<!--	页面头部-->
 <div class="navbar fl">
-  <div class="box"> 
-	  <a href="">栏目名称</a>
-	  <a href="">栏目名称</a>
-	  <a href="">栏目名称</a>
-	  <a href="">栏目名称</a>
-	  <a href="">栏目名称</a>
-	  <a href="">栏目名称</a>
-	  <a href="">栏目名称</a>
-	  <a href="">栏目名称</a>
-	  <a href="">栏目名称</a>
-	  <a href="">栏目名称</a>
-	  <a href="">栏目名称</a>
- </div>
+  <div class="box"> <a href="">栏目名称</a><a href="">栏目名称</a><a href="">栏目名称</a><a href="">栏目名称</a><a href="">栏目名称</a> </div>
+  <a href="">栏目名称</a><a href="">栏目名称</a><a href="">栏目名称</a><a href="">栏目名称</a><a href="">栏目名称</a> </div>
+<!--	主导航-->
+<div class="focus"><img src="images/banner-1.jpg" alt=""></div>
+<!--	焦点图-->
+<div class="nb box">
+  <h2>学院动态<span> / News</span></h2>
+  <!--栏目标题-->
+  <div class="l fl"> <img src="images/n1.jpg" alt="">
+    <h3><a href="">副校长李利一行调研国家网络安全基地孵化器</a></h3>
+    <p>本网讯（通讯员 彭传波 巫健）6月19日，武昌职业学院副校长李利率领学校世界技能大赛办公室主任彭传波、校产与后勤管</p>
+  </div>
+  <!--	学院动态左边-->
+  <div class="r fl">
+    <div class="hot_news"> <a href="">
+      <h3>2020贫困生认定公示名单</h3>
+      <p>根据学校下发的《关于开展家庭经济困难学生认定工作的通知》文件精神，我院近期开展了贫困认定工作。各班级本着公开、公平、公正的原则进行了评选和推荐，现将认定名单公示如下，公示期为10</p>
+      </a> </div>
+    <!--头条新闻-->
+    <ul class="list_news">
+      <li><a href=""><i class="iconfont icon-pinglun"></i>电信学院圆满完成“2020一带一路暨金砖国家技能发展与技术创新大赛”赛项 <span>20-10-30</span></a></li>
+      <li><a href=""><i class="iconfont icon-pinglun"></i>陆军大队与电子信息工程学院半军事化管理工作推进会 <span>20-10-30</span></a></li>
+      <li><a href=""><i class="iconfont icon-pinglun"></i>2020年电子信息工程学院贫困认定公示名单<span>20-10-30</span></a></li>
+      <li><a href=""><i class="iconfont icon-pinglun"></i>副校长李利一行调研国家网络安全基地孵化器<span>20-10-30</span></a></li>
+      <li><a href=""><i class="iconfont icon-pinglun"></i>关于韩飞等13名同志转为正式党员的公示<span>20-10-30</span></a></li>
+      <li><a href=""><i class="iconfont icon-pinglun"></i>关于预备党员拟转正公示<span>20-10-30</span></a></li>
+      <li><a href=""><i class="iconfont icon-pinglun"></i>电信学院参加专家评估培训会<span>20-10-30</span></a></li>
+      <li><a href=""><i class="iconfont icon-pinglun"></i>电信学院参加专家评估培训会<span>20-10-30</span></a></li>
+    </ul>
+    <!--新闻列表--> 
+  </div>
+  <!--	学院动态右边--> 
 </div>
-	<div class="focus">
-	<img src="images/banner-1.jpg" alt="">
-	</div>
-	<div class="box news">
-     <h2>学院动态
-		 <span style="font-size: 1.3rem; color:#717171;margin-left: 8px">/ News</span></h2>
-		</div>
-	<div class=" col-lg-5 col-md-12 m-0 p-0">
-	<div id="imgnews" class="carousel slide"
-		 data-ride="carousel" data-interval="5000"></div></div>
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		<div class="fi img_ news">
-		  <img src="images/news1.jpg" alt="" width="357" height="357">
-		<h3><a href="">副校长李利-行调研国家网络安全基地孵化器</a></h3>
-		<p>本网讯（通讯员 彭传波 巫健） 6月19日，武昌职业学院副长李利率领学校世界技能大赛办公室主任彭传波，校产与后勤管理处副处长胥连路，云计算与信息安全学院副院长巫健，世界技能大赛办公室技术科科长马涛等一行人深入国家网安基地调研。</p>
-		</div>
-		<div class="fl newsbox">
-		<div class="new-zd">
-			<h2 class="new-zd-bt">2020年电子信息工程学院贫困认定公示名单</h2>
-			<p class="new-zd-wb">根据学校下发的《关于开展家庭经济困难学生认定工作的通知》文件精神，我院近期开展了贫困认定工作。各班级本着公开，公平，公正的原则进行了评选和推荐，现将认定名单公示如下，公示期为10月24日至29日。</p>
-			</div>
-			<div class="new-pt">
-				<a class="itcm" href="#"></a>
-			</div>
-	</div >
-	
+<!--	新闻盒子-->
+<div class="rd-news-box">
+  <div class="rd-news">
+    <div class="xz-item-ber">
+      <div class="item active">督导简报</div>
+      <div class="item">党团建设</div>
+      <div class="item">美和易思专栏</div>
+      <div class="item">学生管理</div>
+    </div>
+    <div class="rd-item-box">
+      <div class="rd-new-item">
+        <div class="date">
+          <p>11</p>
+          <p>9</p>
+        </div>
+        <p>【质量管理与工作督察处】关于给予课堂教学手机管控不力的7名教师通报批评处理的决定</p>
+      </div>
+      <div class="rd-new-item">
+        <div class="date">
+          <p>11</p>
+          <p>9</p>
+        </div>
+        <p>【质量管理与工作督察处】关于给予课堂教学手机管控不力的7名教师通报批评处理的决定</p>
+      </div>
+      <div class="rd-new-item">
+        <div class="date">
+          <p>11</p>
+          <p>9</p>
+        </div>
+        <p>【质量管理与工作督察处】关于给予课堂教学手机管控不力的7名教师通报批评处理的决定</p>
+      </div>
+      <div class="rd-new-item">
+        <div class="date">
+          <p>11</p>
+          <p>9</p>
+        </div>
+        <p>【质量管理与工作督察处】关于给予课堂教学手机管控不力的7名教师通报批评处理的决定</p>
+      </div>
+      <div class="rd-new-item">
+        <div class="date">
+          <p>11</p>
+          <p>9</p>
+        </div>
+        <p>【质量管理与工作督察处】关于给予课堂教学手机管控不力的7名教师通报批评处理的决定</p>
+      </div>
+      <div class="rd-new-item">
+        <div class="date">
+          <p>11</p>
+          <p>9</p>
+        </div>
+        <p>【质量管理与工作督察处】关于给予课堂教学手机管控不力的7名教师通报批评处理的决定</p>
+      </div>
+      <div class="rd-new-item">
+        <div class="date">
+          <p>11</p>
+          <p>9</p>
+        </div>
+        <p>【质量管理与工作督察处】关于给予课堂教学手机管控不力的7名教师通报批评处理的决定</p>
+      </div>
+      <div class="rd-new-item">
+        <div class="date">
+          <p>11</p>
+          <p>9</p>
+        </div>
+        <p>【质量管理与工作督察处】关于给予课堂教学手机管控不力的7名教师通报批评处理的决定</p>
+      </div>
+      <div class="rd-new-item">
+        <div class="date">
+          <p>11</p>
+          <p>9</p>
+        </div>
+        <p>【质量管理与工作督察处】关于给予课堂教学手机管控不力的7名教师通报批评处理的决定</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="img_group box"><!--图集-->
+  <div class="l fl">
+    <div><samp>实训设备</samp></div>
+    <div><samp>名师风采</samp></div>
+  </div><!--图集-左-->
+  <div class="c fl"><samp>校园风貌</samp></div><!--图集-中-->
+  <div class="r fl"><!--图集-右-->
+    <div><samp>学生风采</samp></div>
+    <div><samp>趣味活动</samp></div>
+  </div>
+</div>
 </body>
 </html>
